--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
-    "jquery": ">= 2.1"
+    "jquery": ">= 2.1",
+    "ez-plus": "^1.1.20"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
